hard-gists/4624820/run.log
=== Docker Run Log for 4624820 ===
Started at: Mi 29. Okt 14:55:06 CET 2025

[2025-10-29 14:55:06] START: Running container for 4624820
[2025-10-29 14:55:06] SUCCESS: Container ec682f99787c9b99a37f48928472acbefa2f3cb9f7025bebf6484cfd7567f90e started for 4624820
=== Container logs for 4624820 ===
  File "/snippet.py", line 61
    print "server started"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4624820 ===
[2025-10-29 14:55:08] INFO: Container ec682f99787c9b99a37f48928472acbefa2f3cb9f7025bebf6484cfd7567f90e has stopped
